@@ -1,3 +1,4 @@
 class Car < ActiveRecord::Base
   belongs_to :color
+  belongs_to :rating
 end
